--- a/src/Components/Semester/Semester.css
+++ b/src/Components/Semester/Semester.css
@@ -1,20 +1,8 @@
-.semester-container {
-  margin: 20px;
-  padding: 15px;
-  background: linear-gradient(120deg, black, blue);
-  border-radius: 5px;
-  box-shadow: 5px 5px 5px gray;
-  cursor: pointer;
+.video-box{
+    width:200px;
+    height:200px;
+    border:1px solid red;
 }
-.semester-container h3 {
-  margin-bottom: 0;
-  color: white;
-  font-size:25px;
+.display-video{
+    width:100%;
 }
-.semester-container:hover h3{
-  color: green;
-}
-.semester-container:active h3{
-  color: red;
-}
-
