basic design added to semester container

--- a/src/Components/CSE/CSE.css
+++ b/src/Components/CSE/CSE.css
@@ -1,4 +1,17 @@
-.active-style{
-    color:green;
-    background:blue;
+.active-style {
+  color: green;
+  background: blue;
+}
+.semester-parent {
+  display: flex;
+  gap: 10px;
+  border:1px solid red;
+  justify-content:space-between;
+  overflow-x:auto;
+}
+.semester-child {
+  background: skyblue;
+  border-radius: 5px;
+  text-align:center;
+  padding:15px;
 }
