Some css added in home component

--- a/src/Components/CSE/CSE.css
+++ b/src/Components/CSE/CSE.css
@@ -5,13 +5,17 @@
 .semester-parent {
   display: flex;
   gap: 10px;
-  border:1px solid red;
+  margin:10px;
   justify-content:space-between;
   overflow-x:auto;
 }
 .semester-child {
   background: skyblue;
   border-radius: 5px;
-  text-align:center;
   padding:15px;
+  cursor:pointer;
+}
+.semester-child h5{
+  /* font-size:1.5vmax; */
+  text-align:center;
 }
