responsive design updated

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,5 @@
-.footer{
-    border-radius:5px
+.container-fluid {
+  background: linear-gradient(-10deg, #ffffff, #01274c);
 }
 .footer li {
   list-style: none;
@@ -7,11 +7,16 @@
 .footer li a {
   text-decoration: none;
 }
-.contact-us {
-    
+.contact-us>div,.follow-us>div{
+  margin:50px 0;
+}
+.contact-us,.follow-us h1 {
+  color: white;
+}
+.contact-us h1{
+  text-align: center;
 }
 .follow-us i {
   font-size: 40px;
   margin: 0 10px;
-  
 }
