--- a/src/Components/Department/Department.css
+++ b/src/Components/Department/Department.css
@@ -1,14 +1,29 @@
-/* Add your custom styles here */
-.container {
-    max-width: 600px; /* Adjust the max-width based on your design preferences */
-  }
-  
-  .list-group-item {
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .list-group-item:hover {
-    background-color: #f8f9fa; /* Add a subtle hover effect */
-  }
-  
+.department{
+  background: linear-gradient(130deg, #01274C, white);
+  /* border:2px solid green; */
+  padding:20px 0 0;
+}
+.dept-container {
+  padding: 30px ;
+  /* border:2px solid green; */
+}
+.dept-list {
+  color: red;
+  padding:10px 0;
+}
+.card-0 {
+  background: url("../../assets/CSE.jpeg") no-repeat fixed center;
+  background-size: cover;
+}
+.card-1 {
+  background: url("../../assets/EEE.jpg") no-repeat center;
+  background-size: cover;
+}
+.card-2 {
+  background: url("../../assets/ETE.jpg") no-repeat center;
+  background-size: cover;
+}
+.card-3 {
+  background: url("../../assets/web.jpg") center;
+  background-size: cover;
+}
