--- a/src/Components/Semester/Semester.css
+++ b/src/Components/Semester/Semester.css
@@ -1,30 +1,60 @@
-.playlist-container {
-  display: flex;
-  flex-wrap: wrap;
-  border: 3px solid red;
-  flex-direction:row-reverse;
-  height: 500px;
-  justify-content: space-between;
-  align-items:center;
+.selected-sem-name{
+text-align:center;
+color:white;
+}
+/* .........courses and playlist............. */
+.course-list {
+  background: linear-gradient(130deg, #01274c, white);
+  border-radius: 15px;
+  color: white;
+  margin: 15px 0;
+}
+.course-index {
 }
 .playlists {
-  background: red;
+  background: linear-gradient(130deg, #01274c, white);
   color: white;
-  border: 1px solid red;
-  width: 30%;
-  height: 100%;
+  height: 360px;;
+  position: relative;
   overflow: auto;
-  box-shadow: 5px 5px 5px gray;
+  /* margin: 10px 0; */
+  padding: 10px 0;
   border-radius: 15px;
-  border: 3px solid black;
 }
+.playlist {
+  margin: 2px;
+}
+.playlists > h5 {
+  padding: 3px 15px;
+  text-align: center;
+}
+.hover-over:hover {
+  color: red;
+  background: white;
+  cursor: pointer;
+}
+/* ...........video part............ */
 .playlist-video {
-  width: 50%;
-  height: 100%;
-  border: 3px solid green;
+  border: 3px solid red;
   border-radius: 15px;
-  overflow:hidden;
+  overflow: hidden;
+  height: 550px;
+  padding: 0;
+  margin:10px 0;
 }
-.react-player {
-  width: 100%;
+/* ......extra........... */
+.btn {
+  border-radius: 15px;
+  background: red;
+  outline: none;
+}
+.empty-msg {
+  border: 1px solid;
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  width: 80%;
+  margin: 20% auto;
+  color: white;
+  /* background:red; */
 }
